fixed player boxes and text align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,24 +2,27 @@ h1 {
 	font-size: 50px;
 	text-align: center;
 }
-#playerInfo, #player1Info, #player2Info {
+#playerInfo, #player1Info, #player2Info, #player1Turn, #player2Turn {
 	margin: auto;
 	width: 20%;
 	margin-top: 15px;
 	margin-bottom: 15px;
+	text-align: center;
 }
 #container {
 	width: 75%;
 	margin: auto;
 }
 #player1, #results, #player2 {
-	height: 350px;
+	float: left;
+	height: 200px;
 	width: 300px;
 	border: 2px solid black;
-	display: inline-block;
 	margin: 26px;
+	text-align: center;
 }
 #chatbox {
+	clear: both;
 	width: 90%;
 	height: 200px;
 	border: 1px solid black;
